Move linking child processes to a separate, dedidcated dialog in metadata editor