@@ -383,9 +383,9 @@ public class MetadataEditorPage extends Page<MetadataEditorPage> {
                         .findElement(By.id(SAVE_AND_EXIT_BUTTON_ID))::isDisplayed);
         WebElement contextMenu = Browser.getDriver().findElement(By.id("contextMenuLogicalTree"));
         List<WebElement> menuItems = contextMenu.findElements(By.className("ui-menuitem"));
-        assertEquals(4, menuItems.size(), "Wrong number of context menu items");
+        assertEquals(5, menuItems.size(), "Wrong number of context menu items");
         // click "add element" option
-        menuItems.get(0).click();
+        menuItems.getFirst().click();
         // open "structure element type selection" menu
         clickItemWhenDisplayed(By.id("dialogAddDocStrucTypeForm:docStructAddTypeSelection"), 1000, 1000, 5);
         // click first option
